# 3DDFA_V2

./: .gitignore
FaceBoxes/utils/nms/: cpu_nms.pyx
bfm/: bfm.py
package/: requirements.txt  setup.cfg
package/TDDFA_V2/: FaceBoxes  Sim3DR  TDDFA.py  TDDFA_ONNX.py  bfm  files.py
utils/: depth.py  onnx.py
