[metadata]
name = TDDFA_V2
version = 0.1
; url = http://www.fujielab.org/
; author = Shinya Fujie
; author_email = shinya.fujie@p.chibakoudai.jp
license = MIT
; description = fjlcp: Fujie Lab. Communication Platform
; long_description = file: README.md

; [options.entry_points]
; console_scripts =
;   fjlcp-server = fjlcp_cli.server:cli_main
  
[options]
zip_safe = False
packages = find:
; install_requires = 
;    grpcio>=1.15
;    protobuf>=4.22
;   iterators
python_requires=
    >=3.10

; [options.package_data]
; sflib.img.face = data/*.csv
; sflib.img.face.feature.ppes2 = data/*.csv